--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,8 +1,16 @@
 {
+  "languageserver": {
+    "metals": {
+      "command": "metals-vim",
+      "rootPatterns": ["build.sbt"],
+      "filetypes": ["scala", "sbt"]
+    }
+  },
   "coc.preferences.formatOnSaveFiletypes": [
     "css",
     "Markdown",
     "typescript",
+    "javascript",
     "html",
     "scss"
   ]
