--- a/.skhdrc
+++ b/.skhdrc
@@ -1,8 +1,5 @@
 # open terminal
-cmd - return : open -a iTerm .
-# cmd - return : /Applications/iTerm.app/Contents/MacOS/iTerm2
-# cmd - /
-# cmd - 0x2 : /Applications/iTerm.app/Contents/MacOS/iTerm2
+cmd - 0x2C : open -a iTerm .
 
 # focus window
 ctrl - h : yabai -m window --focus west
