--- a/coc-settings.json
+++ b/coc-settings.json
@@ -4,13 +4,27 @@
       "command": "metals-vim",
       "rootPatterns": ["build.sbt"],
       "filetypes": ["scala", "sbt"]
+    },
+    "ccls": {
+      "command": "ccls",
+      "filetypes": ["c", "cpp", "cuda", "objc", "objcpp"],
+      "rootPatterns": [
+        ".ccls",
+        "compile_commands.json",
+        ".vim/",
+        ".git/",
+        ".hg/"
+      ],
+      "initializationOptions": {
+        "cache": {
+          "directory": ".ccls-cache"
+        }
+      }
     }
   },
   "coc.preferences.formatOnSaveFiletypes": [
     "css",
     "Markdown",
-    "typescript",
-    "javascript",
     "html",
     "scss"
   ]
