--- a/.skhdrc
+++ b/.skhdrc
@@ -11,37 +11,38 @@ ctrl - k : yabai -m window --focus north
 ctrl - l : yabai -m window --focus east
 
 # swap window
-shift + ctrl - h : yabai -m window --swap west
-shift + ctrl - j : yabai -m window --swap south
-shift + ctrl - k : yabai -m window --swap north
-shift + ctrl - l : yabai -m window --swap east
+ctrl + shift - h : yabai -m window --swap west
+ctrl + shift - j : yabai -m window --swap south
+ctrl + shift - k : yabai -m window --swap north
+ctrl + shift - l : yabai -m window --swap east
 
 # move window
-ctrl + cmd - h : yabai -m window --warp west
-ctrl + cmd - j : yabai -m window --warp south
-ctrl + cmd - k : yabai -m window --warp north
-ctrl + cmd - l : yabai -m window --warp east
+cmd + ctrl - h : yabai -m window --warp west
+cmd + ctrl - j : yabai -m window --warp south
+cmd + ctrl - k : yabai -m window --warp north
+cmd + ctrl - l : yabai -m window --warp east
 
 # cycle all windows on space backwards by coordinate
-shift + ctrl - n : yabai -m window --focus "$(yabai -m query --windows --space | jq -re "[sort_by(.id, .frame) | reverse | .[] | select(.role == \"AXWindow\" and .subrole == \"AXStandardWindow\") | .id] | nth(index($(yabai -m query --windows --window | jq -re ".id")) - 1)")"
+ctrl + shift - n : yabai -m window --focus "$(yabai -m query --windows --space | jq -re "[sort_by(.id, .frame) | reverse | .[] | select(.role == \"AXWindow\" and .subrole == \"AXStandardWindow\") | .id] | nth(index($(yabai -m query --windows --window | jq -re ".id")) - 1)")"
 
 # cycle all windows on space backwards by coordinate
-shift + ctrl - m : yabai -m window --focus "$(yabai -m query --windows --space | jq -re "[sort_by(.id, .frame) | .[] | select(.role == \"AXWindow\" and .subrole == \"AXStandardWindow\") | .id] | nth(index($(yabai -m query --windows --window | jq -re ".id")) - 1)")"
+ctrl + shift - m : yabai -m window --focus "$(yabai -m query --windows --space | jq -re "[sort_by(.id, .frame) | .[] | select(.role == \"AXWindow\" and .subrole == \"AXStandardWindow\") | .id] | nth(index($(yabai -m query --windows --window | jq -re ".id")) - 1)")"
 
 # balance size of windows
-shift + alt - 0 : yabai -m space --balance
+alt + shift - 0 : yabai -m space --balance
+alt - 0x18 : yabai -m space --balance
 
 # make floating window fill screen
-# shift + alt - up     : yabai -m window --grid 1:1:0:0:1:1
+# alt + shift - up     : yabai -m window --grid 1:1:0:0:1:1
 
 # make floating window fill left-half of screen
-# shift + alt - left   : yabai -m window --grid 1:2:0:0:1:1
+# alt + shift - left   : yabai -m window --grid 1:2:0:0:1:1
 
 # make floating window fill right-half of screen
-# shift + alt - right  : yabai -m window --grid 1:2:1:0:1:1
+# alt + shift - right  : yabai -m window --grid 1:2:1:0:1:1
 
 # create desktop, move window and follow focus - uses jq for parsing json (brew install jq)
-shift + cmd - u : yabai -m space --create && \
+cmd + shift - u : yabai -m space --create && \
                   index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
                   yabai -m window --space "${index}" && \
                   yabai -m space --focus "${index}"
@@ -69,27 +70,27 @@ cmd + shift - m : yabai -m space --focus 8
 # cmd + shift + ,
 cmd + shift - 0x2B : yabai -m space --focus 9
 # cmd + shift + .
-cmd + shift - 0x2F : yabai -m space --focus 10
+# cmd + shift - 0x2F : yabai -m space --focus 9
 
 # send window to desktop and follow focus
-ctrl + shift + cmd - y : yabai -m window --space recent; yabai -m space --focus recent
-ctrl + shift + cmd - h : yabai -m window --space  1; yabai -m space --focus 1
-ctrl + shift + cmd - j : yabai -m window --space  2; yabai -m space --focus 2
-ctrl + shift + cmd - k : yabai -m window --space  3; yabai -m space --focus 3
-ctrl + shift + cmd - l : yabai -m window --space  4; yabai -m space --focus 4
+cmd + ctrl + shift - y : yabai -m window --space recent; yabai -m space --focus recent
+cmd + ctrl + shift - h : yabai -m window --space  1; yabai -m space --focus 1
+cmd + ctrl + shift - j : yabai -m window --space  2; yabai -m space --focus 2
+cmd + ctrl + shift - k : yabai -m window --space  3; yabai -m space --focus 3
+cmd + ctrl + shift - l : yabai -m window --space  4; yabai -m space --focus 4
 # cmd + shift + ;
-ctrl + shift + cmd - 0x29 : yabai -m window --space  5; yabai -m space --focus 5
+cmd + ctrl + shift - 0x29 : yabai -m window --space  5; yabai -m space --focus 5
 # cmd + shift + '
-ctrl + shift + cmd - 0x27 : yabai -m window --space  6; yabai -m space --focus 6
-ctrl + shift + cmd - n : yabai -m window --space  7; yabai -m space --focus 7
-ctrl + shift + cmd - m : yabai -m window --space  8; yabai -m space --focus 8
+cmd + ctrl + shift - 0x27 : yabai -m window --space  6; yabai -m space --focus 6
+cmd + ctrl + shift - n : yabai -m window --space  7; yabai -m space --focus 7
+cmd + ctrl + shift - m : yabai -m window --space  8; yabai -m space --focus 8
 # cmd + shift + ,
-ctrl + shift + cmd - 0x2B : yabai -m window --space  9; yabai -m space --focus 9
+cmd + ctrl + shift - 0x2B : yabai -m window --space  9; yabai -m space --focus 9
 # cmd + shift + .
-ctrl + shift + cmd - 0x2F : yabai -m window --space 10; yabai -m space --focus 10
+#cmd + ctrl + shift - 0x2F : yabai -m window --space 10; yabai -m space --focus 9
 
 # focus monitor
-shift + cmd - p  : yabai -m display --focus recent
+# cmd + shift - p  : yabai -m display --focus recent
 ctrl + alt - x  : yabai -m display --focus recent
 ctrl + alt - z  : yabai -m display --focus prev
 ctrl + alt - c  : yabai -m display --focus next
@@ -98,30 +99,30 @@ ctrl + alt - 2  : yabai -m display --focus 2
 ctrl + alt - 3  : yabai -m display --focus 3
 
 # send window to monitor and follow focus
-ctrl + cmd - p  : yabai -m window --display recent; yabai -m display --focus recent
-ctrl + cmd - z  : yabai -m window --display prev; yabai -m display --focus prev
-ctrl + cmd - c  : yabai -m window --display next; yabai -m display --focus next
-ctrl + cmd - 1  : yabai -m window --display 1; yabai -m display --focus 1
-ctrl + cmd - 2  : yabai -m window --display 2; yabai -m display --focus 2
-ctrl + cmd - 3  : yabai -m window --display 3; yabai -m display --focus 3
+cmd + ctrl - p  : yabai -m window --display recent; yabai -m display --focus recent
+cmd + ctrl - z  : yabai -m window --display prev; yabai -m display --focus prev
+cmd + ctrl - c  : yabai -m window --display next; yabai -m display --focus next
+cmd + ctrl - 1  : yabai -m window --display 1; yabai -m display --focus 1
+cmd + ctrl - 2  : yabai -m window --display 2; yabai -m display --focus 2
+cmd + ctrl - 3  : yabai -m window --display 3; yabai -m display --focus 3
 
 # move window
-shift + ctrl - a : yabai -m window --move rel:-20:0
-shift + ctrl - s : yabai -m window --move rel:0:20
-shift + ctrl - w : yabai -m window --move rel:0:-20
-shift + ctrl - d : yabai -m window --move rel:20:0
+# ctrl + shift - a : yabai -m window --move rel:-20:0
+# ctrl + shift - s : yabai -m window --move rel:0:20
+# ctrl + shift - w : yabai -m window --move rel:0:-20
+# ctrl + shift - d : yabai -m window --move rel:20:0
 
 # increase window size
-shift + alt - a : yabai -m window --resize left:-20:0
-shift + alt - s : yabai -m window --resize bottom:0:20
-shift + alt - w : yabai -m window --resize top:0:-20
-shift + alt - d : yabai -m window --resize right:20:0
+alt + shift - a : yabai -m window --resize left:-20:0
+alt + shift - s : yabai -m window --resize bottom:0:20
+alt + shift - w : yabai -m window --resize top:0:-20
+alt + shift - d : yabai -m window --resize right:20:0
 
 # decrease window size
-shift + cmd - a : yabai -m window --resize left:20:0
-shift + cmd - s : yabai -m window --resize bottom:0:-20
-shift + cmd - w : yabai -m window --resize top:0:20
-shift + cmd - d : yabai -m window --resize right:-20:0
+cmd + shift - a : yabai -m window --resize left:20:0
+cmd + shift - s : yabai -m window --resize bottom:0:-20
+cmd + shift - w : yabai -m window --resize top:0:20
+cmd + shift - d : yabai -m window --resize right:-20:0
 
 # set insertion point in focused container
 ctrl + alt - h : yabai -m window --insert west
@@ -148,25 +149,25 @@ alt - d : yabai -m window --toggle zoom-parent
 alt - f : yabai -m window --toggle zoom-fullscreen
 
 # toggle window native fullscreen
-shift + alt - f : yabai -m window --toggle native-fullscreen
+# alt + shift - f : yabai -m window --toggle native-fullscreen
 
 # toggle window border
-shift + alt - b : yabai -m window --toggle border
+alt + shift - b : yabai -m window --toggle border
 
 # toggle window split type
 alt - e : yabai -m window --toggle split
 
 # float / unfloat window and center on screen
-alt - t : yabai -m window --toggle float;\
-          yabai -m window --grid 4:4:1:1:2:2
+# alt - t : yabai -m window --toggle float;\
+#           yabai -m window --grid 4:4:1:1:2:2
 
-# toggle sticky
-alt - s : yabai -m window --toggle sticky
+# # toggle sticky
+# alt - s : yabai -m window --toggle sticky
 
 # toggle sticky, float and resize to picture-in-picture size
-alt - p : yabai -m window --toggle sticky;\
-          yabai -m window --grid 5:5:4:0:1:1
+# alt - p : yabai -m window --toggle sticky;\
+#           yabai -m window --grid 5:5:4:0:1:1
 
 # change layout of desktop
-ctrl + alt - a : yabai -m space --layout bsp
-ctrl + alt - d : yabai -m space --layout float
+# ctrl + alt - a : yabai -m space --layout bsp
+# ctrl + alt - d : yabai -m space --layout float
