--- a/.yabairc
+++ b/.yabairc
@@ -23,7 +23,7 @@ yabai -m config window_border                on
 yabai -m config window_border_width          1
 yabai -m config active_window_border_color   0xff5FDBA7
 yabai -m config normal_window_border_color   0xff505050
-yabai -m config insert_window_border_color   0xffFFC2C9
+yabai -m config insert_window_border_color   0xff0081C1
 yabai -m config active_window_opacity        1.0
 yabai -m config normal_window_opacity        0.90
 yabai -m config split_ratio                  0.50
@@ -39,3 +39,5 @@ yabai -m config bottom_padding               8
 yabai -m config left_padding                 8
 yabai -m config right_padding                8
 yabai -m config window_gap                   8
+
+yabai -m rule --add app="iTerm2" manage=off
