--- a/.skhdrc
+++ b/.skhdrc
@@ -5,42 +5,60 @@
 cmd - i : open -na "Brave Browser" --args --new-window
 cmd + shift - i : open -na "Brave Browser" --args --incognito
 
+# add an on_enter command to the default mode
+
+# :: default : yabai -m config normal_window_border_color 0xff505050
+# defines a new mode 'zen' with an on_enter command, that captures keypresses
+:: zen @ : yabai -m config normal_window_border_color 0xffBE4F45
+# from 'default' mode, activate mode 'zen'
+cmd - 0x2B ; zen
+
+# workaround: this command actually sets us to default (zen < -)
+zen < 0x1B ; default
+# workaround: this command sets the border color than calls the 'default' mode
+zen < escape : yabai -m config normal_window_border_color 0xff505050 ; skhd --key "0x1B"
+
+# fuji mode
+:: fuji @ : yabai -m config normal_window_border_color 0xff0081C1
+# from 'default' mode, activate mode 'fuji' (cmd - ')
+cmd - 0x27 ; fuji
+# workaround: this command actually sets us to default (space < -)
+fuji < 0x1B ; default
+# workaround: this command sets the border color than calls the 'default' mode
+fuji < escape : yabai -m config normal_window_border_color 0xff505050 ; skhd --key "0x1B"
+
 # focus window
-ctrl - h : yabai -m window --focus west
-ctrl - j : yabai -m window --focus south
-ctrl - k : yabai -m window --focus north
-ctrl - l : yabai -m window --focus east
+fuji < h : yabai -m window --focus west ; skhd --key "escape"
+fuji < j : yabai -m window --focus south ; skhd --key "escape"
+fuji < k : yabai -m window --focus north ; skhd --key "escape"
+fuji < l : yabai -m window --focus east ; skhd --key "escape"
+
+# focus window
+zen < h : yabai -m window --focus west
+zen < j : yabai -m window --focus south
+zen < k : yabai -m window --focus north
+zen < l : yabai -m window --focus east
 
 # swap window
-ctrl + shift - h : yabai -m window --swap west
-ctrl + shift - j : yabai -m window --swap south
-ctrl + shift - k : yabai -m window --swap north
-ctrl + shift - l : yabai -m window --swap east
+zen < shift - h : yabai -m window --swap west
+zen < shift - j : yabai -m window --swap south
+zen < shift - k : yabai -m window --swap north
+zen < shift - l : yabai -m window --swap east
 
 # move window
-cmd + ctrl - h : yabai -m window --warp west
-cmd + ctrl - j : yabai -m window --warp south
-cmd + ctrl - k : yabai -m window --warp north
-cmd + ctrl - l : yabai -m window --warp east
+zen < ctrl - h : yabai -m window --warp west
+zen < ctrl - j : yabai -m window --warp south
+zen < ctrl - k : yabai -m window --warp north
+zen < ctrl - l : yabai -m window --warp east
 
 # cycle all windows on space backwards by coordinate
-ctrl + shift - n : yabai -m window --focus "$(yabai -m query --windows --space | jq -re "[sort_by(.id, .frame) | reverse | .[] | select(.role == \"AXWindow\" and .subrole == \"AXStandardWindow\") | .id] | nth(index($(yabai -m query --windows --window | jq -re ".id")) - 1)")"
+zen < ctrl + shift - n : yabai -m window --focus "$(yabai -m query --windows --space | jq -re "[sort_by(.id, .frame) | reverse | .[] | select(.role == \"AXWindow\" and .subrole == \"AXStandardWindow\") | .id] | nth(index($(yabai -m query --windows --window | jq -re ".id")) - 1)")"
 
 # cycle all windows on space backwards by coordinate
-ctrl + shift - m : yabai -m window --focus "$(yabai -m query --windows --space | jq -re "[sort_by(.id, .frame) | .[] | select(.role == \"AXWindow\" and .subrole == \"AXStandardWindow\") | .id] | nth(index($(yabai -m query --windows --window | jq -re ".id")) - 1)")"
+zen < ctrl + shift - m : yabai -m window --focus "$(yabai -m query --windows --space | jq -re "[sort_by(.id, .frame) | .[] | select(.role == \"AXWindow\" and .subrole == \"AXStandardWindow\") | .id] | nth(index($(yabai -m query --windows --window | jq -re ".id")) - 1)")"
 
 # balance size of windows
-alt + shift - 0 : yabai -m space --balance
-alt - 0x18 : yabai -m space --balance
-
-# make floating window fill screen
-# alt + shift - up     : yabai -m window --grid 1:1:0:0:1:1
-
-# make floating window fill left-half of screen
-# alt + shift - left   : yabai -m window --grid 1:2:0:0:1:1
-
-# make floating window fill right-half of screen
-# alt + shift - right  : yabai -m window --grid 1:2:1:0:1:1
+zen < 0x18 : yabai -m space --balance
 
 # create desktop, move window and follow focus - uses jq for parsing json (brew install jq)
 cmd + shift - u : yabai -m space --create && \
@@ -54,121 +72,106 @@ cmd + alt - n : yabai -m space --create && \
                 yabai -m space --focus "${index}"
 
 # destroy desktop
-cmd + alt - w : yabai -m space --destroy
+zen < q : yabai -m space --destroy
+
+# everest mode
+:: everest @ : yabai -m config normal_window_border_color 0xffE2C08C
+# from 'default' mode, activate mode 'everest' (cmd - ')
+cmd - 0x2F ; everest
+# workaround: this command actually sets us to default (space < -)
+everest < 0x1B ; default
+# workaround: this command sets the border color than calls the 'default' mode
+everest < escape : yabai -m config normal_window_border_color 0xff505050 ; skhd --key "0x1B"
 
 # fast focus desktop
-cmd + shift - y : yabai -m space --focus recent
-cmd + shift - h : yabai -m space --focus 1
-cmd + shift - j : yabai -m space --focus 2
-cmd + shift - k : yabai -m space --focus 3
-cmd + shift - l : yabai -m space --focus 4
+everest < y : yabai -m space --focus recent
+everest < h : yabai -m space --focus 1 ; skhd --key "escape"
+everest < j : yabai -m space --focus 2 ; skhd --key "escape"
+everest < k : yabai -m space --focus 3 ; skhd --key "escape"
+everest < l : yabai -m space --focus 4 ; skhd --key "escape"
 # cmd + shift + ;
-cmd + shift - 0x29 : yabai -m space --focus 5
+everest < 0x29 : yabai -m space --focus 5 ; skhd --key "escape"
 # cmd + shift + '
-cmd + shift - 0x27 : yabai -m space --focus 6
-cmd + shift - n : yabai -m space --focus 7
-cmd + shift - m : yabai -m space --focus 8
+everest < 0x27 : yabai -m space --focus 6 ; skhd --key "escape"
+everest < n : yabai -m space --focus 7 ; skhd --key "escape"
+everest < m : yabai -m space --focus 8 ; skhd --key "escape"
 # cmd + shift + ,
-cmd + shift - 0x2B : yabai -m space --focus 9
+everest < 0x2B : yabai -m space --focus 9 ; skhd --key "escape"
 # cmd + shift + .
-# cmd + shift - 0x2F : yabai -m space --focus 9
+everest < 0x2F : yabai -m space --focus 10 ; skhd --key "escape"
+
+# fast focus desktop
+zen < cmd - y : yabai -m space --focus recent
+zen < cmd - h : yabai -m space --focus 1
+zen < cmd - j : yabai -m space --focus 2
+zen < cmd - k : yabai -m space --focus 3
+zen < cmd - l : yabai -m space --focus 4
+# cmd + shift + ;
+zen < cmd - 0x29 : yabai -m space --focus 5
+# cmd + shift + '
+zen < cmd - 0x27 : yabai -m space --focus 6
+zen < cmd - n : yabai -m space --focus 7
+zen < cmd - m : yabai -m space --focus 8
+# cmd + shift + ,
+zen < cmd - 0x2B : yabai -m space --focus 9
+# cmd + shift + .
+zen < cmd - 0x2F : yabai -m space --focus 10
 
 # send window to desktop and follow focus
-cmd + ctrl + shift - y : yabai -m window --space recent; yabai -m space --focus recent
-cmd + ctrl + shift - h : yabai -m window --space  1; yabai -m space --focus 1
-cmd + ctrl + shift - j : yabai -m window --space  2; yabai -m space --focus 2
-cmd + ctrl + shift - k : yabai -m window --space  3; yabai -m space --focus 3
-cmd + ctrl + shift - l : yabai -m window --space  4; yabai -m space --focus 4
+zen < cmd + shift - y : yabai -m window --space recent; yabai -m space --focus recent
+zen < cmd + shift - h : yabai -m window --space  1; yabai -m space --focus 1
+zen < cmd + shift - j : yabai -m window --space  2; yabai -m space --focus 2
+zen < cmd + shift - k : yabai -m window --space  3; yabai -m space --focus 3
+zen < cmd + shift - l : yabai -m window --space  4; yabai -m space --focus 4
 # cmd + shift + ;
-cmd + ctrl + shift - 0x29 : yabai -m window --space  5; yabai -m space --focus 5
+zen < cmd + shift - 0x29 : yabai -m window --space  5; yabai -m space --focus 5
 # cmd + shift + '
-cmd + ctrl + shift - 0x27 : yabai -m window --space  6; yabai -m space --focus 6
-cmd + ctrl + shift - n : yabai -m window --space  7; yabai -m space --focus 7
-cmd + ctrl + shift - m : yabai -m window --space  8; yabai -m space --focus 8
+zen < cmd + shift - 0x27 : yabai -m window --space  6; yabai -m space --focus 6
+zen < cmd + shift - n : yabai -m window --space  7; yabai -m space --focus 7
+zen < cmd + shift - m : yabai -m window --space  8; yabai -m space --focus 8
 # cmd + shift + ,
-cmd + ctrl + shift - 0x2B : yabai -m window --space  9; yabai -m space --focus 9
+zen < cmd + shift - 0x2B : yabai -m window --space  9; yabai -m space --focus 9
 # cmd + shift + .
-#cmd + ctrl + shift - 0x2F : yabai -m window --space 10; yabai -m space --focus 9
-
-# focus monitor
-# cmd + shift - p  : yabai -m display --focus recent
-ctrl + alt - x  : yabai -m display --focus recent
-ctrl + alt - z  : yabai -m display --focus prev
-ctrl + alt - c  : yabai -m display --focus next
-ctrl + alt - 1  : yabai -m display --focus 1
-ctrl + alt - 2  : yabai -m display --focus 2
-ctrl + alt - 3  : yabai -m display --focus 3
-
-# send window to monitor and follow focus
-cmd + ctrl - p  : yabai -m window --display recent; yabai -m display --focus recent
-cmd + ctrl - z  : yabai -m window --display prev; yabai -m display --focus prev
-cmd + ctrl - c  : yabai -m window --display next; yabai -m display --focus next
-cmd + ctrl - 1  : yabai -m window --display 1; yabai -m display --focus 1
-cmd + ctrl - 2  : yabai -m window --display 2; yabai -m display --focus 2
-cmd + ctrl - 3  : yabai -m window --display 3; yabai -m display --focus 3
-
-# move window
-# ctrl + shift - a : yabai -m window --move rel:-20:0
-# ctrl + shift - s : yabai -m window --move rel:0:20
-# ctrl + shift - w : yabai -m window --move rel:0:-20
-# ctrl + shift - d : yabai -m window --move rel:20:0
+zen < cmd + shift - 0x2F : yabai -m window --space 10; yabai -m space --focus 10
 
 # increase window size
-alt + shift - a : yabai -m window --resize left:-20:0
-alt + shift - s : yabai -m window --resize bottom:0:20
-alt + shift - w : yabai -m window --resize top:0:-20
-alt + shift - d : yabai -m window --resize right:20:0
+zen < a : yabai -m window --resize left:-20:0
+zen < s : yabai -m window --resize bottom:0:20
+zen < w : yabai -m window --resize top:0:-20
+zen < d : yabai -m window --resize right:20:0
 
 # decrease window size
-cmd + shift - a : yabai -m window --resize left:20:0
-cmd + shift - s : yabai -m window --resize bottom:0:-20
-cmd + shift - w : yabai -m window --resize top:0:20
-cmd + shift - d : yabai -m window --resize right:-20:0
+zen < shift - a : yabai -m window --resize left:20:0
+zen < shift - s : yabai -m window --resize bottom:0:-20
+zen < shift - w : yabai -m window --resize top:0:20
+zen < shift - d : yabai -m window --resize right:-20:0
 
 # set insertion point in focused container
-ctrl + alt - h : yabai -m window --insert west
-ctrl + alt - j : yabai -m window --insert south
-ctrl + alt - k : yabai -m window --insert north
-ctrl + alt - l : yabai -m window --insert east
+zen < alt - h : yabai -m window --insert west
+zen < alt - j : yabai -m window --insert south
+zen < alt - k : yabai -m window --insert north
+zen < alt - l : yabai -m window --insert east
 
 # rotate tree
-alt - r : yabai -m space --rotate 90
+zen < r : yabai -m space --rotate 90
 
 # mirror tree y-axis
-alt - y : yabai -m space --mirror y-axis
+zen < y : yabai -m space --mirror y-axis
 
 # mirror tree x-axis
-alt - x : yabai -m space --mirror x-axis
+zen < alt - x : yabai -m space --mirror x-axis
 
 # toggle desktop offset
-alt - a : yabai -m space --toggle padding; yabai -m space --toggle gap
+zen < alt - a : yabai -m space --toggle padding; yabai -m space --toggle gap
 
 # toggle window parent zoom
-alt - d : yabai -m window --toggle zoom-parent
+zen < g : yabai -m window --toggle zoom-parent
 
 # toggle window fullscreen zoom
-alt - f : yabai -m window --toggle zoom-fullscreen
-
-# toggle window native fullscreen
-# alt + shift - f : yabai -m window --toggle native-fullscreen
+zen < f : yabai -m window --toggle zoom-fullscreen
 
 # toggle window border
-alt + shift - b : yabai -m window --toggle border
+zen < alt + shift - b : yabai -m window --toggle border
 
 # toggle window split type
-alt - e : yabai -m window --toggle split
-
-# float / unfloat window and center on screen
-# alt - t : yabai -m window --toggle float;\
-#           yabai -m window --grid 4:4:1:1:2:2
-
-# # toggle sticky
-# alt - s : yabai -m window --toggle sticky
-
-# toggle sticky, float and resize to picture-in-picture size
-# alt - p : yabai -m window --toggle sticky;\
-#           yabai -m window --grid 5:5:4:0:1:1
-
-# change layout of desktop
-# ctrl + alt - a : yabai -m space --layout bsp
-# ctrl + alt - d : yabai -m space --layout float
+zen < alt - e : yabai -m window --toggle split
