--- a/.skhdrc
+++ b/.skhdrc
@@ -1,14 +1,16 @@
-# open terminal
-# cmd - /
-# cmd - 0x2C : open -na iTerm ~
 # open browser
 cmd - i : open -na "Brave Browser" --args --new-window
 cmd + shift - i : open -na "Brave Browser" --args --incognito
 
-# zen mode (cmd - ')
-:: zen @
-cmd - 0x27 ; zen
-zen < escape ; default
+# zen mode (cmd - ;)
+:: zen @ : yabai -m config status_bar_background_color 0xffBE4F45
+cmd - 0x24 ; zen
+
+:: zenwindow @ : yabai -m config status_bar_background_color 0xff926D0D
+:: zenspace @ : yabai -m config status_bar_background_color 0xff0081C1
+
+zen, zenspace < 0x24 ; zenwindow
+zen, zenwindow < 0x31 ; zenspace
 
 # set insertion point in focused container
 zen < alt - h : yabai -m window --insert west
@@ -39,11 +41,6 @@ zen < alt + shift - b : yabai -m window --toggle border
 
 # toggle window split type
 zen < alt - e : yabai -m window --toggle split
-
-# zen mode (zen < w)
-:: zenwindow @
-zen < w ; zenwindow
-zenwindow < escape ; default
 
 # focus window
 zenwindow < h : yabai -m window --focus west
@@ -84,21 +81,16 @@ zenwindow < shift - s : yabai -m window --resize bottom:0:-20
 zenwindow < shift - w : yabai -m window --resize top:0:20
 zenwindow < shift - d : yabai -m window --resize right:-20:0
 
-# zen mode (zen < w)
-:: zenspace @
-zen < s ; zenspace
-zenspace < escape ; default
-
 # create desktop, move window and follow focus - uses jq for parsing json (brew install jq)
 zenspace < u : yabai -m space --create && \
-                  index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
-                  yabai -m window --space "${index}" && \
-                  yabai -m space --focus "${index}"
+  index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
+  yabai -m window --space "${index}" && \
+  yabai -m space --focus "${index}"
 
 # create desktop and follow focus - uses jq for parsing json (brew install jq)
 zenspace < cmd - n : yabai -m space --create && \
-                index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
-                yabai -m space --focus "${index}"
+  index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
+  yabai -m space --focus "${index}"
 
 # destroy desktop
 zenspace < q : yabai -m space --destroy
@@ -109,16 +101,12 @@ zenspace < h : yabai -m space --focus 1
 zenspace < j : yabai -m space --focus 2
 zenspace < k : yabai -m space --focus 3
 zenspace < l : yabai -m space --focus 4
-# cmd + shift + ;
-zenspace < 0x29 : yabai -m space --focus
-# cmd + shift + '
-zenspace < 0x27 : yabai -m space --focus
+zenspace < 0x29 : yabai -m space --focus 5 # ;
+zenspace < 0x27 : yabai -m space --focus 6 # '
 zenspace < n : yabai -m space --focus 7
 zenspace < m : yabai -m space --focus 8
-# cmd + shift + ,
-zenspace < 0x2B : yabai -m space --focus 9
-# cmd + shift + .
-zenspace < 0x2F : yabai -m space --focus 10
+zenspace < 0x2B : yabai -m space --focus 9 # ,
+zenspace < 0x2F : yabai -m space --focus 10 # .
 
 # send window to desktop and follow focus
 zenspace < shift - y : yabai -m window --space recent; yabai -m space --focus recent
@@ -126,13 +114,15 @@ zenspace < shift - h : yabai -m window --space  1; yabai -m space --focus 1
 zenspace < shift - j : yabai -m window --space  2; yabai -m space --focus 2
 zenspace < shift - k : yabai -m window --space  3; yabai -m space --focus 3
 zenspace < shift - l : yabai -m window --space  4; yabai -m space --focus 4
-# cmd + shift + ;
-zenspace < shift - 0x29 : yabai -m window --space  5; yabai -m space --focus 5
-# cmd + shift + '
-zenspace < shift - 0x27 : yabai -m window --space  6; yabai -m space --focus 6
+zenspace < shift - 0x29 : yabai -m window --space  5; yabai -m space --focus 5 # shift - ;
+zenspace < shift - 0x27 : yabai -m window --space  6; yabai -m space --focus 6 # shift - '
 zenspace < shift - n : yabai -m window --space  7; yabai -m space --focus 7
 zenspace < shift - m : yabai -m window --space  8; yabai -m space --focus 8
-# cmd + shift + ,
-zenspace < shift - 0x2B : yabai -m window --space  9; yabai -m space --focus 9
-# cmd + shift + .
-zenspace < shift - 0x2F : yabai -m window --space 10; yabai -m space --focus 10
+zenspace < shift - 0x2B : yabai -m window --space  9; yabai -m space --focus 9 # shift - ,
+zenspace < shift - 0x2F : yabai -m window --space 10; yabai -m space --focus 10 # shift - .
+
+# workaround: this command actually sets us to default (zen < -)
+zen, zenwindow, zenspace < 0x1B ; default
+# workaround: this command sets the border color than calls the 'default' mode
+zen, zenwindow, zenspace < escape : yabai -m config status_bar_background_color 0xff202020; \
+  skhd --key "0x1B"
