--- a/.yabairc
+++ b/.yabairc
@@ -1,7 +1,7 @@
 #!/usr/bin/env sh
 
 # bar settings
-yabai -m config status_bar                   off
+yabai -m config status_bar                   on
 yabai -m config status_bar_text_font         "Helvetica Neue:Bold:12.0"
 yabai -m config status_bar_icon_font         "FontAwesome:Regular:12.0"
 yabai -m config status_bar_background_color  0xff202020
@@ -28,7 +28,7 @@ yabai -m config active_window_opacity        1.0
 yabai -m config normal_window_opacity        0.90
 yabai -m config split_ratio                  0.50
 yabai -m config auto_balance                 off
-yabai -m config mouse_modifier               fn
+yabai -m config mouse_modifier               cmd
 yabai -m config mouse_action1                move
 yabai -m config mouse_action2                resize
 
@@ -41,3 +41,5 @@ yabai -m config right_padding                8
 yabai -m config window_gap                   8
 
 yabai -m rule --add app="iTerm2" manage=off
+yabai -m rule --add app="System Preferences" manage=off
+yabai -m rule --add app="Cisco AnyConnect Secure Mobility Client" manage=off
